--- a/src/index.css
+++ b/src/index.css
@@ -167,22 +167,11 @@ q:before {
   fill: #7e7e7e69
 }
 
-::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-    background-color: #F5F5F5;
+#clear:hover {
+  cursor: pointer;
 }
 
-::-webkit-scrollbar
-{
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar-thumb
-{
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
 }
