--- a/src/Categories/Category.css
+++ b/src/Categories/Category.css
@@ -2,6 +2,7 @@
   display: flex;
   overflow: auto;
   padding: 5px 0px;
+  -webkit-mask-image: linear-gradient(to right, rgb(255, 255, 255) 70%, rgba(255, 255, 255, 0.25));
 }
 
 .category-list > div {
