--- a/src/index.css
+++ b/src/index.css
@@ -171,7 +171,7 @@ q:before {
   cursor: pointer;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
-}
+} */
