Updated the way the filtering works. You can now filter without selecting a filter and unselect a filter if need be. Also used key values pairs for the category list seeing as the titles are in plurals

--- a/src/Categories/Category.css
+++ b/src/Categories/Category.css
@@ -12,6 +12,7 @@
   font-size: 12px;
   transition: 0.5s ease all;
   margin: 0px 6px;
+  white-space: nowrap;
 }
 
 .category-list > div:hover, div.is-selected {
